fix padding bug on firefox

--- a/Modules/Master/Resources/assets/sass/layer/layer_mobile.scss
+++ b/Modules/Master/Resources/assets/sass/layer/layer_mobile.scss
@@ -1560,7 +1560,7 @@ p.kwp-info {
         border-bottom: 1px solid $master-primary;
         color: $master-grey-dark;
         border-radius: 0;
-        padding: 0 10px;
+        padding: .3em; // fix for firefox
         font-size: 18px;
         display: block;
         width: 100%;
