--- a/Modules/Novasol/Resources/assets/sass/layer/layer_mobile.scss
+++ b/Modules/Novasol/Resources/assets/sass/layer/layer_mobile.scss
@@ -1545,7 +1545,7 @@ p.kwp-info {
         border-bottom: 1px solid $secondarycolor;
         color: $fontcolor;
         border-radius: 0;
-        padding: 0 10px;
+        padding: .3em; // fix for firefox
         font-size: 18px;
         display: block;
         width: 100%;
