--- a/Modules/Traveloverland/Resources/assets/sass/layer/_layer-responsible.scss
+++ b/Modules/Traveloverland/Resources/assets/sass/layer/_layer-responsible.scss
@@ -364,7 +364,7 @@
       border-bottom: 1px solid $master-grey-light;
       color: $master-grey-dark;
       border-radius: 0;
-      padding: 0 10px;
+      padding: .3em; // fix for firefox
       font-size: 14px;
       display: block;
       width: 100%;
